--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+}
+
+input{
+  background-color: transparent;
+  color: white;
+  border: 0;
 }
 
 .App-logo {
